@@ -1,8 +1,17 @@
-package com.wlkjyy;
+/*
+ * Copyright (c) 2024. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+ * Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
+ * Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
+ * Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
+ * Vestibulum commodo. Ut rhoncus gravida arcu.
+ */
 
+package com.wlkjyy.Eloquent;
+
+import lombok.Getter;
+
+import javax.sql.DataSource;
 import java.sql.Connection;
-import java.sql.DriverManager;
-import java.sql.PreparedStatement;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -10,24 +19,39 @@ import java.util.HashMap;
 
 /**
  * @Author: wlkjyy <wlkjyy@vip.qq.com>
- * @Date: 2024/3/26
+ * @Date: 2024/3/28
  * @Project: EasyDB
  */
 public class DB {
-    /***
-     * JDBC驱动
-     */
-    protected String driver = "com.mysql.cj.jdbc.Driver";
+
+
+    private final DataSource connect;
+
+
+    public DB(DataSource connect) {
+        this.connect = connect;
+    }
 
     /***
-     * 数据库连接
+     * 获取一个连接
+     * @return
+     * @throws SQLException
      */
-    private Connection connection;
+    public Connection getConnect() throws SQLException {
+        return this.connect.getConnection();
+    }
 
     /***
-     * 表名
+     * 关闭连接
+     * @param connection
+     * @throws SQLException
      */
+    public void closeConnect(Connection connection) throws SQLException {
+        connection.close();
+    }
+
     private String table = null;
+
 
     /***
      * Where子句
@@ -96,118 +120,17 @@ public class DB {
      */
     private ArrayList<String> bind;
 
-
-    /***
-     * 数据库名称
-     */
-    protected String DB_DATABASE = "jianzhan";
-
-    /***
-     * 数据库用户名
-     */
-
-    protected String DB_USERNAME = "root";
-
-    /***
-     * 数据库密码
-     */
-
-    protected String DB_PASSWORD = "123456";
-
-    /***
-     * 数据库HOST
-     */
-
-    protected String DB_HOST = "localhost";
-
-    /***
-     * 数据库端口
-     */
-
-    protected Integer DB_PORT = 3306;
-
-
-    public DB() {
-
+    public DB table(String table_name) {
+        this.table = table_name;
+        return this;
     }
 
-    /***
-     * 创建数据库连接
-     * @param host
-     * @param username
-     * @param password
-     * @param database
-     * @param port
-     * @return
-     */
-    private Connection create_connect(String host, String username, String password, String database, Integer port) {
-
-        String jdbcUrl = "jdbc:mysql://" + host + ":" + port + "/" + database + "?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC";
-
-        try {
-            Class.forName(this.driver);
-        } catch (ClassNotFoundException e) {
-            throw new RuntimeException("找不到驱动类");
-        }
-
-        try {
-            return DriverManager.getConnection(jdbcUrl, username, password);
-        } catch (SQLException e) {
-            throw new RuntimeException("数据库连接失败");
-        }
-    }
-
-    /***
-     * 检查连接
-     */
-    private void checkConnection() {
-        if (this.connection == null) {
-            throw new RuntimeException("数据库未初始化之前不能执行操作。");
-        }
-    }
-
-    /***
-     * 获取JDBC连接
-     * @return
-     */
-    public Connection getConnection() {
-        checkConnection();
-        return this.connection;
-    }
-
-    public void create_connect() {
-        this.connection = this.create_connect(this.DB_HOST, this.DB_USERNAME, this.DB_PASSWORD, this.DB_DATABASE, this.DB_PORT);
-    }
-
-    /***
-     * 指定表名
-     * @param table_name
-     * @return
-     */
-    public static DB table(String table_name) {
-
-        DB instance = new DB();
-        instance.table = table_name;
-        instance.connection = instance.create_connect(instance.DB_HOST, instance.DB_USERNAME, instance.DB_PASSWORD, instance.DB_DATABASE, instance.DB_PORT);
-
-        return instance;
-    }
-
-    /***
-     * where子句
-     * @param column 字段名称
-     * @param operate 操作
-     * @param value 值
-     * @return
-     */
     public DB where(String column, String operate, Object value) {
 
-        // 判断操作符是否被允许
         if (!Arrays.asList(this.operateList).contains(operate)) {
-            throw new RuntimeException("操作符不合法");
+            throw new RuntimeException("The operator is not allowed");
         }
 
-//        重复检查
         for (String[] item : this.where) {
             if (item[0].equals(column) && item[1].equals(operate) && item[2].equals(String.valueOf(value))) {
                 return this;
@@ -218,28 +141,12 @@ public class DB {
         return this;
     }
 
-    /***
-     * where子句
-     * @param column 字段名称
-     * @param value 值
-     * 如果没有指定操作符，默认为=
-     * @return
-     */
     public DB where(String column, Object value) {
         return this.where(column, "=", value);
     }
 
-    /***
-     * or where子句
-     * @param column
-     * @param operate
-     * @param value
-     * 用法：db.table("kaxiao_config").where("vkey","site_name").orWhere("vkey","site_name");
-     * @return
-     */
     public DB orWhere(String column, String operate, Object value) {
 
-//        重复检查
         for (String[] item : this.orWhere) {
             if (item[0].equals(column) && item[1].equals(operate) && item[2].equals(String.valueOf(value))) {
                 return this;
@@ -250,35 +157,19 @@ public class DB {
         return this;
     }
 
-    /***
-     * orWhere子句
-     * @param column
-     * @param value
-     * @return
-     */
     public DB orWhere(String column, Object value) {
         return this.orWhere(column, "=", value);
     }
 
-    /***
-     * 选择字段
-     * @param column
-     * @return
-     */
     public DB select(String... column) {
         this.select = new ArrayList<>(Arrays.asList(column));
         return this;
     }
 
 
-    /***
-     * 添加选择字段
-     * @param column
-     * @return
-     */
     public DB addSelect(String... column) {
 
-        if (this.select.size() == 1 && this.select.get(0).equals("*")) {
+        if (this.select.size() == 1 && this.select.getFirst().equals("*")) {
             this.select = new ArrayList<>();
         }
 
@@ -286,13 +177,10 @@ public class DB {
         return this;
     }
 
-    /***
-     * 设置为删除
-     */
-    public int delete() {
+    public int delete() throws SQLException {
         this.delete = true;
         this.getSql();
-        return this.execute(this.compileSql, this.bind.toArray());
+        return new Query(this.getConnect(), this.compileSql, this.bind).execute();
     }
 
     /***
@@ -300,11 +188,11 @@ public class DB {
      * @param data
      * @return
      */
-    public int update(HashMap<String, Object> data) {
+    public int update(HashMap<String, Object> data) throws SQLException {
         this.update = data;
         this.getSql();
 
-        return this.execute(this.compileSql, this.bind.toArray());
+        return new Query(this.getConnect(), this.compileSql, this.bind).execute();
     }
 
     /***
@@ -313,11 +201,11 @@ public class DB {
      * 相当于insert into kaxiao_config (vkey,value) values ('site_name','wlkjyy')
      * @return
      */
-    public boolean insert(HashMap<String, Object> data) {
+    public boolean insert(HashMap<String, Object> data) throws SQLException {
         this.insert = data;
         this.getSql();
 
-        return this.execute(this.compileSql, this.bind.toArray()) > 0;
+        return new Query(this.getConnect(), this.compileSql, this.bind).execute() > 0;
 
     }
 
@@ -335,40 +223,25 @@ public class DB {
         return builder.getSql();
     }
 
-    /***
-     * 执行查询，返回结果
-     * 用法：db.table("kaxiao_config").get();
-     * @return
-     */
-    public ArrayList<HashMap<String, Object>> get() {
-        this.checkConnection();
+    public ArrayList<HashMap<String, Object>> get() throws SQLException {
 
         Builder builder = this.Builder();
 
         ArrayList<String> bind = builder.getBind();
         String Sql = builder.getSql();
 
-        System.out.println(Sql);
-
-//        执行查询
-//        return new Query(this.getConnection(), Sql, bind).get(false);
-        return new Query(this.getConnection(), Sql, bind).get(false);
+        return new Query(this.getConnect(), Sql, bind).get(false);
 
 
     }
 
-    public HashMap<String, Object> first() {
-        this.checkConnection();
-
+    public HashMap<String, Object> first() throws SQLException {
         this.limit(1);
-
         Builder builder = this.Builder();
         ArrayList<String> bind = builder.getBind();
         String Sql = builder.getSql();
 
-//        System.out.println(Sql);
-
-        ArrayList<HashMap<String, Object>> res = new Query(this.getConnection(), Sql, bind).get(true);
+        ArrayList<HashMap<String, Object>> res = new Query(this.getConnect(), Sql, bind).get(true);
         if (!res.isEmpty()) {
             return res.getFirst();
         } else {
@@ -376,68 +249,19 @@ public class DB {
         }
     }
 
-    /***
-     * 通过主键查找一条数据
-     * @param primaryKey
-     * @param value
-     * @return
-     */
-    public HashMap<String, Object> find(String primaryKey, Object value) {
-        this.checkConnection();
+    public HashMap<String, Object> find(String primaryKey, Object value) throws SQLException {
 
         this.where = new ArrayList<>();
 
         return this.where(primaryKey, value).first();
     }
 
-    /***
-     * 通过主键查找一条数据，主键默认为id
-     * @param value
-     * @return
-     */
-    public HashMap<String, Object> find(Object value) {
+    public HashMap<String, Object> find(Object value) throws SQLException {
         return this.find("id", value);
     }
 
-    /***
-     * 执行原生查询
-     * @param sql
-     * @return
-     */
-    public int statement(String sql) {
-        return this.execute(sql);
-    }
 
-
-    private int execute(String sql, Object[] params) {
-        try {
-            this.checkConnection();
-            PreparedStatement stmt = this.getConnection().prepareStatement(sql);
-            for (int i = 0; i < params.length; i++) {
-                stmt.setObject(i + 1, params[i]);
-            }
-//            stmt.execute();
-//
-//            return true;
-//            获取受影响的行数
-            return stmt.executeUpdate();
-
-        } catch (SQLException e) {
-            return 0;
-        }
-    }
-
-    private int execute(String sql) {
-        return this.execute(sql, new Object[]{});
-    }
-
-    /**
-     * 获取条目数量
-     *
-     * @return
-     */
-    public Integer count() {
-//        return this.get().size();
+    public Integer count() throws SQLException {
         this.select = new ArrayList<>();
         this.select.add("count(*) as count");
         HashMap<String, Object> res = this.first();
@@ -448,12 +272,8 @@ public class DB {
         }
     }
 
-    /***
-     * 取最大值
-     * @param column
-     * @return
-     */
-    public Double max(String column) {
+
+    public Double max(String column) throws SQLException {
 
         this.select = new ArrayList<>();
         this.select.add("max(" + column + ") as max");
@@ -466,12 +286,7 @@ public class DB {
 
     }
 
-    /***
-     * 取最小值
-     * @param column
-     * @return
-     */
-    public Double min(String column) {
+    public Double min(String column) throws SQLException {
 
         this.select = new ArrayList<>();
         this.select.add("min(" + column + ") as min");
@@ -483,12 +298,7 @@ public class DB {
         }
     }
 
-    /***
-     * 求和
-     * @param column
-     * @return
-     */
-    public Double sum(String column) {
+    public Double sum(String column) throws SQLException {
         this.select = new ArrayList<>();
         this.select.add("sum(" + column + ") as sum");
         HashMap<String, Object> res = this.first();
@@ -503,7 +313,7 @@ public class DB {
     /***
      * 取平均
      */
-    public Double avg(String column) {
+    public Double avg(String column) throws SQLException {
         this.select = new ArrayList<>();
         this.select.add("avg(" + column + ") as avg");
         HashMap<String, Object> res = this.first();
@@ -514,13 +324,6 @@ public class DB {
         }
     }
 
-    /***
-     * between语句
-     * @param column
-     * @param value1
-     * @param value2
-     * @return
-     */
     public DB whereBetween(String column, Object value1, Object value2) {
         this.where.add(new String[]{column, "between", String.valueOf(value1) + " and " + String.valueOf(value2), null});
         return this;
@@ -542,12 +345,6 @@ public class DB {
         return this;
     }
 
-    /***
-     * md5查询
-     * @param column
-     * @param value
-     * @return
-     */
     public DB md5Where(String column, Object value) {
         this.where.add(new String[]{column, "=", "md5(" + String.valueOf(value) + ")", null});
         return this;
@@ -578,28 +375,13 @@ public class DB {
         return this;
     }
 
-    /***
-     * 是否存在
-     * @return
-     */
-    public boolean exists() {
+
+    public boolean exists() throws SQLException {
         return this.count() > 0;
     }
 
-    /***
-     * 是否不存在
-     * @return
-     */
-    public boolean doesntExist() {
+    public boolean doesntExist() throws SQLException {
         return this.count() == 0;
-    }
-
-    /***
-     * 执行原生select
-     */
-    public ArrayList<HashMap<String, Object>> query(String sql) {
-        this.create_connect();
-        return new Query(this.getConnection(), sql, new ArrayList<>()).get(false);
     }
 
     private ArrayList<String> ObjectFormat(Object[] params) {
@@ -610,99 +392,26 @@ public class DB {
         return res;
     }
 
-    /***
-     * 执行原生select
-     */
-    public ArrayList<HashMap<String, Object>> query(String sql, Object[] params) {
-        this.create_connect();
-        ArrayList<String> paramsList = this.ObjectFormat(params);
-        ArrayList<HashMap<String, Object>> res = new Query(this.getConnection(), sql, paramsList).get(true);
-        return res;
-    }
-
-
-    /***
-     * 执行原生更新
-     */
-    public boolean update(String sql) {
-        this.create_connect();
-        return new Query(this.getConnection(), sql, new ArrayList<>()).execute();
-    }
-
-    /***
-     * 执行原生更新
-     */
-    public boolean update(String sql, Object[] params) {
-        this.create_connect();
-        ArrayList<String> paramsList = this.ObjectFormat(params);
-
-        return new Query(this.getConnection(), sql, paramsList).execute();
-    }
-
-    /***
-     * 执行原生删除
-     */
-    public boolean delete(String sql) {
-        this.create_connect();
-        return new Query(this.getConnection(), sql, new ArrayList<>()).execute();
-    }
-
-    /***
-     * 执行原生删除
-     */
-    public boolean delete(String sql, Object[] params) {
-        this.create_connect();
-        ArrayList<String> paramsList = this.ObjectFormat(params);
-        return new Query(this.getConnection(), sql, paramsList).execute();
-    }
-
-    /***
-     * limit限制
-     * @param limit
-     *
-     * @return
-     */
     public DB limit(int limit, int offset) {
         this.limit = new Integer[]{limit, offset};
         return this;
     }
 
-    /***
-     * limit限制，对于不需要offset的情况
-     * @param limit
-     * @return
-     */
     public DB limit(int limit) {
         this.limit = new Integer[]{limit, null};
         return this;
     }
 
-    /***
-     * OrderBy 排序
-     * @param column
-     * @param order
-     * @return
-     */
     public DB orderBy(String column, String order) {
         this.orderBy.add(new String[]{column, order});
         return this;
     }
 
 
-    /***
-     * OrderBy排序
-     * @param column
-     * @return
-     */
     public DB orderBy(String column) {
         return this.orderBy(column, "asc");
     }
 
-    /***
-     * 基于时间排序
-     * @param column
-     * @return
-     */
     public DB latest(String column) {
         return this.orderBy(column, "desc");
     }
@@ -711,11 +420,6 @@ public class DB {
         return this.orderBy("created_at", "desc");
     }
 
-    /***
-     * 基于时间排序
-     * @param column
-     * @return
-     */
     public DB oldest(String column) {
         return this.orderBy(column, "asc");
     }
@@ -730,53 +434,55 @@ public class DB {
 
     public boolean truncate() {
         try {
-            this.execute("truncate table " + this.table);
-            this.execute("alter table " + this.table + " auto_increment=1");
+            new Query(this.getConnect(), "alter table " + this.table + " auto_increment=1", new ArrayList<>()).execute();
+            new Query(this.getConnect(), "alter table " + this.table + " auto_increment=1", new ArrayList<>()).execute();
             return true;
         } catch (Exception e) {
             return false;
         }
     }
 
-    public int increment(String column, int value) {
+    public int increment(String column, int value) throws SQLException {
         this.update = new HashMap<>();
         this.update.put(column, column + "(EasyDBNoBind)+" + value);
         this.getSql();
-        return this.execute(this.compileSql, this.bind.toArray());
+        return new Query(this.getConnect(), this.compileSql, this.bind).execute();
 
     }
 
-    public int decrement(String column, int value) {
+    public int decrement(String column, int value) throws SQLException {
         this.update = new HashMap<>();
         this.update.put(column, column + "(EasyDBNoBind)-" + value);
         this.getSql();
-        return this.execute(this.compileSql, this.bind.toArray());
+        return new Query(this.getConnect(), this.compileSql, this.bind).execute();
     }
 
-    public int increment(String column) {
+    public int increment(String column) throws SQLException {
         return this.increment(column, 1);
     }
 
-    public int decrement(String column) {
+    public int decrement(String column) throws SQLException {
         return this.decrement(column, 1);
     }
 
-    public int incrementEach(HashMap<String, Object> data) {
+    public int incrementEach(HashMap<String, Object> data) throws SQLException {
         this.update = new HashMap<>();
         for (String column : data.keySet()) {
             this.update.put(column, column + "(EasyDBNoBind)+" + data.get(column));
         }
         this.getSql();
-        return this.execute(this.compileSql, this.bind.toArray());
+
+        return new Query(this.getConnect(), this.compileSql, this.bind).execute();
     }
 
-    public int decrementEach(HashMap<String, Object> data) {
+    public int decrementEach(HashMap<String, Object> data) throws SQLException {
         this.update = new HashMap<>();
         for (String column : data.keySet()) {
             this.update.put(column, column + "(EasyDBNoBind)-" + data.get(column));
         }
         this.getSql();
-        return this.execute(this.compileSql, this.bind.toArray());
+
+        return new Query(this.getConnect(), this.compileSql, this.bind).execute();
     }
 
     public DB distinct(String... column) {
@@ -837,7 +543,6 @@ public class DB {
     }
 
     public DB groupBy(String... column) {
-//        this.groupBy = new ArrayList<>(Arrays.asList(column));
         if (this.groupBy.isEmpty()) {
             this.groupBy = new ArrayList<>(Arrays.asList(column));
         } else {
@@ -848,11 +553,9 @@ public class DB {
 
     public DB whereNull(String column) {
 
-
         this.where.add(new String[]{column, "=", "null"});
 
         return this;
-
 
     }
 
@@ -864,12 +567,10 @@ public class DB {
 
     public DB whereColumn(String column, String operate, String column2) {
 
-        // 判断操作符是否被允许
         if (!Arrays.asList(this.operateList).contains(operate)) {
-            throw new RuntimeException("操作符不合法");
+            throw new RuntimeException("The operator is not allowed");
         }
 
-//        重复检查
         for (String[] item : this.where) {
             if (item[0].equals(column) && item[1].equals(operate) && item[2].equals(String.valueOf(column))) {
                 return this;
@@ -889,12 +590,10 @@ public class DB {
 
     public DB orWhereColumn(String column, String operate, String column2) {
 
-        // 判断操作符是否被允许
         if (!Arrays.asList(this.operateList).contains(operate)) {
-            throw new RuntimeException("操作符不合法");
+            throw new RuntimeException("The operator is not allowed");
         }
 
-//        重复检查
         for (String[] item : this.orWhere) {
             if (item[0].equals(column) && item[1].equals(operate) && item[2].equals(String.valueOf(column))) {
                 return this;
@@ -929,13 +628,38 @@ public class DB {
         return this;
     }
 
+    public DB reorder(String column, String order) {
+        this.reorder();
+        this.orderBy.add(new String[]{column, order});
+        return this;
+    }
 
-    public void close() {
-        try {
-            this.connection.close();
-        } catch (SQLException e) {
-            e.printStackTrace();
-        }
+    private int execute(String sql, Object[] params) throws SQLException {
+        return new Query(this.getConnect(), sql, this.ObjectFormat(params)).execute();
+    }
+
+    public int delete(String sql, Object[] params) throws SQLException {
+        return this.execute(sql, params);
+    }
+
+    public int delete(String sql) throws SQLException {
+        return this.execute(sql, new Object[]{});
+    }
+
+    public int update(String sql, Object[] params) throws SQLException {
+        return this.execute(sql, params);
+    }
+
+    public int update(String sql) throws SQLException {
+        return this.execute(sql, new Object[]{});
+    }
+
+    public ArrayList<HashMap<String, Object>> query(String sql, Object[] params) throws SQLException {
+        return new Query(this.getConnect(), sql, this.ObjectFormat(params)).get(false);
+    }
+
+    public ArrayList<HashMap<String, Object>> query(String sql) throws SQLException {
+        return new Query(this.getConnect(), sql, new ArrayList<>()).get(false);
     }
 
 
